# catan-cli

./: Cargo.toml  README.md  backend.rs  lib.rs  main.rs
ai/: simple_nn.rs
ai/py_train/: train_classic.py
ai/simple_nn/: encode.rs  evaluate.rs  note.txt
backend/: logging.rs  setup.rs
backend/io/: read_game.rs  save_round.rs  save_summary.rs
backend/logging/: log_entry.rs
backend/round/: legal.rs  longest_road.rs  phase.rs  round_struct.rs
backend/setup/: board.rs  city.rs  dice.rs  edge.rs  game.rs  game_parameters.rs  player.rs  road.rs  shape.rs
data/parameters/: harbor_symbols.csv  player_colors.csv  tile_colors.csv
data/templates/beginner-map/: init_settlements.csv  init_tile_rng.csv  tile_resource.csv
data/templates/default/: init_budgets.csv  tile_resource.csv
data/templates/test_city_no_settlement/: init_cities.csv  init_settlements.csv  init_tile_rng.csv
data/templates/test_double_road/: harbors.csv  init_budgets.csv  init_cities.csv  init_roads.csv
data/templates/test_double_settlement/: init_roads.csv  init_settlements.csv  resources.csv  tile_adjacency.csv
data/templates/test_forked_road/: init_roads.csv
data/templates/test_longest_road/: init_roads.csv
data/templates/test_round_road/: init_roads.csv
frontend/: actions.rs  aux_functions.rs  board_parameters.rs  buildings.rs  harbors.rs  io.rs  nodes.rs  roads.rs
src/: ai.rs  frontend.rs  main.rs
src/ai/classic_player/: play.rs
src/backend/: io.rs  monte_carlo.rs  round.rs
src/frontend/: actions.rs  circles.rs  coords.rs  draw_board.rs  edges.rs  tiles.rs
(+31 files in other folders)
