[package]
name = "catan-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.6"
plotters-svg = "0.3.6"
itertools = "0.10"
csv = "1.3.0"
serde = { version = "1.0.203", features = ["derive"] }
rand = "0.8.5"
rayon = "1.10"
uuid = {version = "1.9.1", features = ["v4"]}
svg = "0.17.0"
regex = "1"
tch = {version="0.16.0", features = ["download-libtorch"]}
